objects/CB_LMA_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__r.Name</field>
                <operation>notEqual</operation>
                <value>Local Marketing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMA Relationship (Dealer Account)</relationshipLabel>
        <relationshipName>LMA_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__r.Name</field>
                <operation>equals</operation>
                <value>Local Marketing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMA Related Accounts</relationshipLabel>
        <relationshipName>LMA_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Combined_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>LMA Combined Unique</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LMA_Combined__c</fullName>
        <formula>Dealer_Account__r.Id +  LMA_Account__r.Id</formula>
        <label>LMA Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows the status of the LMAs</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>LMA Relationships</label>
    <nameField>
        <displayFormat>LMAR-{0000}</displayFormat>
        <label>LMA Relationship  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMA Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>